Juntando class Crawler no back

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <form action="/passagem" method="post">
         <input type="text" name="origem"></input>
         <input type="text" name="destino"></input>
+        <input type="number" name="passageiro"></input>
         <input type="date" name="data_ida"></input>
         <input type="date" name="data_volta"></input>
 
