codigo todo funcionando

--- a/templates/passagens.html
+++ b/templates/passagens.html
@@ -19,7 +19,7 @@
                 <th>Selecionar</th>
             </tr>
             
-            {% for valor in content['ida'] %}
+            {% for valor in content['idas'] %}
                 <tr>
                     <td>{{valor['origem']}}</td>
                     <td>{{valor['destino']}}</td>
@@ -43,7 +43,7 @@
                 <th>Selecionar</th>
             </tr>
             
-            {% for valor in content['volta'] %}
+            {% for valor in content['voltas'] %}
                 <tr>
                     <td>{{valor['origem']}}</td>
                     <td>{{valor['destino']}}</td>
