--- a/templates/Pacote.html
+++ b/templates/Pacote.html
@@ -44,5 +44,15 @@
     </table>
     
     <h3>TOTAL:</h3>
+    <table>
+        <tr>
+            <th>Passagem de ida</th>
+            <td>{{content['ida']['preco']}}</td>
+            <td>{{content['passageiros']}}</td>
+            
+            {% set total_ida = content['ida']['preco']|float * content['passageiros']|float %}
+            {{'%0.2f'| format(total_ida|float)}}
+        </tr>
+    </table>
 </body>
 </html>
