--- a/templates/Home.html
+++ b/templates/Home.html
@@ -34,14 +34,11 @@
                         <input type="date" class="form-control" id="floatingInput" placeholder="Data de Volta" name="data_volta">
                         <label for="floatingInput">Data de Volta</label>
                     </div>
-                    <br>    
-                    <label>Quantidade de passageiros</label>
-                    <div class="input-group">
-                        <span class="input-group-text">Número</span>
-                        <input type="number" class="form-control" placeholder="Adultos" name="passageiros">
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control" id="floatingInput" placeholder="Passageiros" name="passageiros">
+                        <label for="floatingInput">Quantidade de passageiros</label>
                     </div>
-                    <br>
-
+                    <br>    
                     <div class="col-auto">
                         <button type="submit" value="submit" class="btn btn-primary btn-block">Pesquisar</button>
                     </div>
