--- a/templates/Hotel.html
+++ b/templates/Hotel.html
@@ -1,42 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="/pacote" method="post">
-        <h3>Hoteis disponiveis:</h3>
-        <table>
-            <tr>
-                <th>Nome</th>
-                <th>Foto</th>
-                <th>Stars</th>
-                <th>Preço</th>
-                <th>Endereço</th>
-                <th>Avaliações TripAdvisor</th>
-                <th>Site TripAdvisor</th>
-                <th>Selecionar</th>
-            </tr>
-            
-            {% for valor in content %}
-                <tr>
-                    <td>{{valor['nome']}}</td>
-                    <td><img src="{{valor['foto']}}"></td>
-                    <td>{{valor['stars']}}</td>
-                    <td>{{valor['preco']}}</td>
-                    <td>{{valor['endereco']}}</td>
-                    <td>{{valor['ranking_site']}}</td>
-                    <td><a href="{{valor['url_site']}}">redirecionar para compra</a></td>
-                    <td><input type="radio" name="hotel" value="{{valor}}" ></td>
-                </tr>
-            {% endfor %}
-            </tr>
-        </table>
+<html>
+    <head>
+        <meta charset="utf-8">        
+        <title>Hospedagem</title>        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </head>
+    <body>
+      <form action="/pacote" method="post" class="pt-3">
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="Home.html">
+              <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
+              Hospedagens do TripAdvisor
+            </a>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" value="submit">Finalizar Pacote</button>
+        </nav>
+        <div class="accordion" id="accordionPanelsStayOpenExample">
+          {% for valor in content %}
 
-        <button type="Submit" value="Submit">clica</button>
-    </form>
-</body>
+
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  <div class="row">
+                    <div class="col">
+                      <h4>{{valor['nome']}}</h4>
+                    </div>
+                    <div class="col">
+                      <h4>{{valor['stars']}} estrelas</h4>
+                    </div>
+                    <div class="col">
+                      <h4>R$ {{valor['preco']}}</h4>
+                    </div>
+                  </div>
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+                  <div class="row align-items-center">
+                      <div class="col">
+                        <img src="{{valor['foto']}}" height="150" width="150">
+                      </div>
+                      <div class="col-8 ">
+                        <div class="row">
+                          <div class="col">
+                            {{valor['nome']}}
+                          </div>
+                          <div class="col">
+                            Número de Estrelas: {{valor['stars']}}
+                          </div>
+                          <div class="col">
+                            Preço: {{valor['preco']}}
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col">
+                            Endereço: {{valor['endereco']}}
+                          </div>
+                          <div class="col">
+                            Avaliações do TripAdvisor: {{valor['ranking_site']}}
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <input type="radio" name="hotel" value="{{valor}}" ></td>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </form>
+    </body>
 </html>
