Preparando pra salvar no banco

--- a/templates/Pacote.html
+++ b/templates/Pacote.html
@@ -53,13 +53,13 @@
             <th>Passagem de ida</th>
             <td>R$ {{content['ida']['preco']}}</td>
             <td>{{content['passageiros']}}</td>
-            <td>{{'%0.2f'| format(total_ida|float)}}</td>
+            <td>R$ {{'%0.2f'| format(total_ida|float)}}</td>
         </tr>
         <tr>
             <th>Passagem de volta</th>
             <td>R$ {{content['volta']['preco']}}</td>
             <td>{{content['passageiros']}}</td>
-            <td>{{'%0.2f'| format(total_volta|float)}}</td>
+            <td>R$ {{'%0.2f'| format(total_volta|float)}}</td>
         </tr>
         <tr>
             <th>Hotel</th>
