--- a/templates/Pacote.html
+++ b/templates/Pacote.html
@@ -1,78 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h3>Passagem <a href="{{content['url_gol']}}">redirecionar para compra</a></h3>
-    <h4>ida</h4>
-    <table>
-        <tr>
-            <td>{{content['ida']['origem']}} - {{content['ida']['hora_emb']}}</td>
-            <td>{{content['ida']['destino']}} - {{content['ida']['hora_desemb']}}</td>
-            <td>{{content['ida']['duracao']}}</td>
-            <td>{{content['ida']['conexao']}}</td>
-            <td>R$ {{content['ida']['preco']}}</td>
-        </tr>
-    </table>
-
-    <h4>volta</h4>
-    <table>
-        <tr>
-            <td>{{content['volta']['origem']}} - {{content['volta']['hora_emb']}}</td></td>
-            <td>{{content['volta']['destino']}} - {{content['volta']['hora_desemb']}}</td></td>
-            <td>{{content['volta']['duracao']}}</td>
-            <td>{{content['volta']['conexao']}}</td>
-            <td>R$ {{content['volta']['preco']}}</td>
-        </tr>
-    </table>
-
-    <h3>Hotel</h3>
-    <table>
-        <tr>
-            <td><img src="{{content['hotel']['foto']}}"></td>
-            <td>{{content['hotel']['nome']}}</td>
-            <td>{{content['hotel']['ranking_site']}}</td>
-            <td>{{content['hotel']['stars']}}</td>
-            <td>R$ {{content['hotel']['preco']}}</td>
-            <td><a href="{{content['hotel']['url_site']}}">redirecionar para compra</a></td>
-        </tr>
-    </table>
-    
-    {% set total_ida = content['ida']['preco']|float * content['passageiros']|float %}
-    {% set total_volta = content['volta']['preco']|float * content['passageiros']|float %}
-    {% set total_hotel = content['hotel']['preco']|float %}
-    {% set total_pacote = total_ida + total_volta + total_hotel %}
-
-    <h3>TOTAL:</h3>
-    <table>
-        <tr>
-            <th>Passagem de ida</th>
-            <td>R$ {{content['ida']['preco']}}</td>
-            <td>{{content['passageiros']}}</td>
-            <td>R$ {{'%0.2f'| format(total_ida|float)}}</td>
-        </tr>
-        <tr>
-            <th>Passagem de volta</th>
-            <td>R$ {{content['volta']['preco']}}</td>
-            <td>{{content['passageiros']}}</td>
-            <td>R$ {{'%0.2f'| format(total_volta|float)}}</td>
-        </tr>
-        <tr>
-            <th>Hotel</th>
-            <td>R$ {{content['hotel']['preco']}}</td>
-            <td></td>
-            <td>R$ {{'%0.2f'| format(total_hotel|float)}}</td>
-        </tr>
-        <tr>
-            <th>TOTAL</th>
-            <td></td>
-            <td></td>
-            <td>R$ {{'%0.2f'| format(total_pacote|float)}}</td>
-        </tr>
-    </table>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">        
+        <title>Nome do Progama</title>        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="Home.html">
+              Pacotes para Viagens
+            </a>
+          </nav>
+          <br>  
+        <div class="text-center center-div">
+            <div class="container w-50 border py-5">
+                <div class="title pb-5">
+                    <h2 class="font-weight-bold">Confirmando Pacote</h2>
+                </div>
+                <table class="table align-middle">
+                    <thead>
+                      <tr>
+                        <th scope="col">Item</th>
+                        <th scope="col-8">Descrição</th>
+                        <th scope="col">Preço</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">Passagem de Ida</th>
+                        <td>{{content['ida']['origem']}} - {{content['ida']['hora_emb']}} {{content['ida']['destino']}} - {{content['ida']['hora_desemb']}} {{content['ida']['duracao']}} {{content['ida']['conexao']}}</td>
+                        <td>{{content['passageiros']}}x R$ {{content['ida']['preco']}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Passagem de Volta</th>
+                        <td>{{content['volta']['origem']}} - {{content['volta']['hora_emb']}} {{content['volta']['destino']}} - {{content['volta']['hora_desemb']}} {{content['volta']['duracao']}} {{content['volta']['conexao']}}</td>
+                        <td>{{content['passageiros']}}x R$ {{content['volta']['preco']}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Hotel</th>
+                        <td>{{content['hotel']['nome']}} {{content['hotel']['ranking_site']}} {{content['hotel']['stars']}}</td>
+                        <td>R$ {{content['hotel']['preco']}}</td>
+                      </tr>
+                    </tbody>
+                    {% set total_ida = content['ida']['preco']|float * content['passageiros']|float %}
+                    {% set total_volta = content['volta']['preco']|float * content['passageiros']|float %}
+                    {% set total_hotel = content['hotel']['preco']|float %}
+                    {% set total_pacote = total_ida + total_volta + total_hotel %}
+                    <tfoot>
+                      <tr>
+                        <th scope="row">Total do Pacote</th>
+                        <td></td>
+                        <td>R$ {{'%0.2f'| format(total_pacote|float)}}</td>
+                      </tr>
+                    </tfoot>
+                  </table>
+            </div>
+        </div>
+    </body>
 </html>
